Removed position: fixed on header and sidebar

--- a/HACC-AP/dashboard.css
+++ b/HACC-AP/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
-  padding-top: 3.5rem;
+/*  padding-top: 3.5rem;*/
 }
 
 /*
@@ -17,17 +17,21 @@ h1 {
   border-bottom: 1px solid #eee;
 }
 
+.navbar {
+	padding: 1rem;
+}
+
 /*
  * Sidebar
  */
 
 .sidebar {
-  position: fixed;
-  top: 51px;
+  /*position: fixed;*/
+  /*top: 51px;*/
   bottom: 0;
   left: 0;
   z-index: 1000;
-  padding: 20px;
+  /*padding: 20px;*/
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
   border-right: 1px solid #eee;
